waakye page done

--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -14,6 +14,7 @@
     <p>Jollof is a famous rice dish in Ghana loved by almost everyone in the country. A good jollof dish should be colorful with the right consistency of rice and good protein (either meat or fish)</p>
     <p>There have been many arguments on social media mostly Twiiter about which country has the best Jollof (ps: it's Ghana ;) amongst some African countries;
     Nigerians claim to have the best but with all that rice joined together? Come On! </p>
+    <p>This picture isn't an accurate one though, I couldn't get any free stock image of Jollof so I'll take a picture and update next time I eat Jollof :)</p>
   
 
     <h3>Ingredients</h3>
