--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>
@@ -14,6 +14,7 @@
 
     </h1>
     <a href="recipes/jollof.html">Jollof</a>
-
+    <a href="recipes/waakye.html">Waakye</a>
+    <a href="recipes/friedrice.html">Fried Rice</a>
     </body>
 </html>
